appId: kingfood.kpos.app.dev
---
- runScript: ../KPOS_locator/KPOS_locator.js
- tapOn:
    text: ".*${output.pos.searchProductField}.*"
- eraseText: 50 # Tự động xóa khoảng 50 ký tự trong ô trước khi nhập (để đảm bảo ô cũ đã sạch)
- inputText: ${PRODUCT_CODE}
- pressKey: Enter
- runFlow:
    when:
      notVisible:
        text: ".*txt-invoice-line-item-code-${PRODUCT_CODE}.*"
    file: themlaisanpham.yaml
    env:
      PRODUCT_CODE: ${PRODUCT_CODE}
- assertVisible:
    text: ".*txt-invoice-line-item-code-${PRODUCT_CODE}.*"
- retry:
    maxRetries: 3
    commands:
      # ── Bước 1: Nhập số lượng ──────────────────────────────────────────
      - tapOn:
          text: ".*txt-invoice-line-item-quantity-${PRODUCT_CODE}.*"
      # - eraseText: 3
      - inputText: "${QUANTITY}"
      # - pressKey: Enter
      
